--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -2,3 +2,5 @@ url=https://automationexercise.com/
 browser=chrome
 email=testercourse@gmail.com
 password=Test123!
+PTA=placeholder
+ApiUrl=https://api.github.com
