--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -4,4 +4,4 @@ email=testercourse@gmail.com
 password=Test123!
 PTA=placeholder
 ApiUrl=https://api.github.com
-GithubUsername=m4rc0n1
+GithubUsername=placeholder
