--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <version>3.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
