--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -5,3 +5,6 @@ password=Test123!
 PTA=placeholder
 ApiUrl=https://api.github.com
 GithubUsername=placeholder
+JDBCURL=jdbc:mysql://127.0.0.1:3306/
+JdbcUserName=root
+JdbcPassword=root
